# kexplore

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  TODO.md
.bugs/items/: 1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  15.toml  16.toml  17.toml  18.toml  19.toml  2.toml  20.toml  21.toml  22.toml  23.toml  24.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
contrib/: README.md  kexplore-termfilechooser-wrapper.sh
rust/: Cargo.toml  README.md
rust/shaders/: ui.vert  ui.vert.spv
rust/src/: preview.rs  text.rs  ui.rs
rust/src/gfx/: mod.rs  swapchain.rs
shaders/: blur.frag  blur.frag.spv  blur.vert  blur.vert.spv  ui.frag  ui.frag.spv
src/: app.c  app.h  cli.rs  draw.c  geom.rs  geometry.c  geometry.h  handlers.rs  main.c  main.h  main.rs  model.rs  node.c  node.h  preview.rs  tasks.rs  text.rs  textfield.rs  ui.rs  utils.c  utils.h
src/gfx/: blur.rs  mod.rs  renderer2d.rs  upload.rs
src/klib/: draw.c  draw.h  geometry.c  geometry.h  keyhold.h  pointer.c  wayland.c  waywrap.h
src/platform/: wayland.rs
